change hi to salam

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    Hi, my name is Sara.
+    Salam, my name is Sara.
     My Family name is FadaviSameti.
 
     <h1>meow</h1>
